overflow fixed

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: "Inter", sans-serif;
+  background: var(--off-white);
 }
 
 /* A elements that don't have a class get default styles */
@@ -228,7 +229,7 @@ select {
 }
 
 .new-section-article {
-  padding-block: 16px;
+  padding-top: 16px;
   padding-bottom: 32px;
 }
 
@@ -305,4 +306,140 @@ select {
   font-size: 15px;
   padding-top: 6px;
   line-height: 1.6;
+}
+.overflow {
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1110px;
+    padding: 0;
+  }
+
+  .header {
+    padding-top: 90px;
+    padding-bottom: 54px;
+    height: auto;
+  }
+
+  .logo {
+    width: 64px;
+  }
+
+  .mobile-toggle {
+    display: none;
+  }
+
+  .nav-list {
+    display: block;
+    position: static;
+    top: none;
+    right: none;
+    width: auto;
+    height: auto;
+    padding: 0;
+    z-index: 1;
+    background-color: inherit;
+  }
+
+  .nav-list > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-list ul li {
+    margin-left: 38px;
+  }
+
+  .nav-list ul li a {
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    padding-block: 12px;
+  }
+
+  .primary-section {
+    display: grid;
+    grid-template-columns: 730px 350px;
+    gap: 30px;
+  }
+
+  .main-article-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+
+  .main-article {
+    padding: 0;
+  }
+
+  .main-article-header {
+    font-size: 56px;
+    line-height: 1;
+    padding-top: 36px;
+  }
+
+  .main-article-text > p {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    line-height: 1.6;
+  }
+
+  .read-more-btn {
+    margin-top: 8px;
+  }
+
+  .new-section {
+    margin-top: 0;
+    padding-top: 22px;
+    padding-left: 24px;
+    padding-right: 26px;
+  }
+
+  .new-section-article {
+    padding-top: 8px;
+  }
+
+  .new-section-article:nth-of-type(2) {
+    padding-top: 16px;
+  }
+
+  .new-section-article:nth-of-type(3) {
+    padding-top: 18px;
+  }
+
+  .new-section-header {
+    font-size: 40px;
+  }
+
+  .top-articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    margin-top: 56px;
+  }
+
+  .top-article-content {
+    padding-top: 0;
+    padding-left: 24px;
+  }
+
+  .top-article-order {
+    font-size: 32px;
+    padding-bottom: 13px;
+  }
+
+  .top-article-text {
+    padding-top: 10px;
+    line-height: 1.5;
+  }
 }
